--- a/src/app/pages/datasets/modules/snapshots/snapshot-rollback-dialog/snapshot-rollback-dialog.component.scss
+++ b/src/app/pages/datasets/modules/snapshots/snapshot-rollback-dialog/snapshot-rollback-dialog.component.scss
@@ -13,11 +13,7 @@
   display: flex;
   flex: 1;
   flex-direction: row-reverse;
-
-  a,
-  button {
-    margin-left: 10px;
-  }
+  gap: 8px;
 }
 
 .form-actions {
